# agents

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb  README.md
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  email.txt  email_handoff_body.html  email_handoff_subject.html  lab3_email_handoff_body.html  lab3_email_handoff_subject.html  lab4_email_handoff_body.html  lab4_email_handoff_subject.html
2_openai/deep_research/: email_agent.py  lab5_email_handoff_body.html  lab5_email_handoff_subject.html
3_crew/my_coder/: README.md  pyproject.toml
3_crew/my_coder/output/: code_and_output.txt
3_crew/my_coder/src/my_coder/: crew.py  main.py
3_crew/my_coder/src/my_coder/config/: agents.yaml
3_crew/my_debate/: README.md  pyproject.toml
3_crew/my_debate/output/: decide.md  oppose.md  propose.md
3_crew/my_debate/src/my_debate/: main.py
3_crew/my_debate/src/my_debate/config/: tasks.yaml
3_crew/my_engineering_team/: README.md  pyproject.toml
3_crew/my_engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/my_engineering_team/src/my_engineering_team/: crew.py  main.py
3_crew/my_engineering_team/src/my_engineering_team/config/: agents.yaml  tasks.yaml
3_crew/my_financial_researcher/: README.md  pyproject.toml
3_crew/my_financial_researcher/output/: report.md
3_crew/my_financial_researcher/src/my_financial_researcher/: crew.py  main.py
3_crew/my_stock_picker/: README.md  pyproject.toml
3_crew/my_stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/my_stock_picker/src/my_stock_picker/: crew.py  main.py
3_crew/my_stock_picker/src/my_stock_picker/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick_tools.py
4_langgraph/sandbox/: dinner_taste.md  dinner_taste_1.md
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent1.py  agent10.py  agent2.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  idea1.md  idea10.md  idea2.md  idea3.md  idea4.md  idea5.md  idea6.md  idea7.md  idea8.md  idea9.md  world.py
5_autogen/sandbox/: flights.md
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb
6_mcp/sandbox/: banoffee.md
