[project]
name = "my_coder"
version = "0.1.0"
description = "my_coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.0"
]

[project.scripts]
my_coder = "my_coder.main:run"
run_crew = "my_coder.main:run"
train = "my_coder.main:train"
replay = "my_coder.main:replay"
test = "my_coder.main:test"
run_with_trigger = "my_coder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
