[project]
name = "my_engineering_team"
version = "0.1.0"
description = "my_engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,litellm,tools]==1.11.0",
    "gradio>=6.9.0",
]

[project.scripts]
my_engineering_team = "my_engineering_team.main:run"
run_crew = "my_engineering_team.main:run"
train = "my_engineering_team.main:train"
replay = "my_engineering_team.main:replay"
test = "my_engineering_team.main:test"
run_with_trigger = "my_engineering_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
