[project]
name = "my_financial_researcher"
version = "0.1.0"
description = "my_financial_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.0",
    "litellm>=1.82.4",
]

[project.scripts]
my_financial_researcher = "my_financial_researcher.main:run"
run_crew = "my_financial_researcher.main:run"
train = "my_financial_researcher.main:train"
replay = "my_financial_researcher.main:replay"
test = "my_financial_researcher.main:test"
run_with_trigger = "my_financial_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
