[project]
name = "my_stock_picker"
version = "0.1.0"
description = "my_stock_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.0"
]

[project.scripts]
my_stock_picker = "my_stock_picker.main:run"
run_crew = "my_stock_picker.main:run"
train = "my_stock_picker.main:train"
replay = "my_stock_picker.main:replay"
test = "my_stock_picker.main:test"
run_with_trigger = "my_stock_picker.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
